# local-fitness-dude

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  reset-dev-after-promotion.yml
devlog/: 2026-05-05-dashboard-chat-seeding.md  2026-05-05-inline-dashboard-insight.md  2026-05-06-heatmap-rank.md  2026-05-06-heatmap-rich-tooltip.md  2026-05-06-recovery-percentile.md  2026-06-06-treat-prompt-as-code.md  2026-06-15-ai-efficiency-and-planfold.md  2026-06-15-training-plans.md  2026-06-16-mcp-server.md  2026-06-18-agent-first.md  2026-06-20-brief-speed.md  2026-06-23-coach-tone-profiles.md  2026-06-23-configurable-grading.md  2026-06-23-mcp-server-coach-persona.md  2026-06-23-plan-grading-fixes.md  2026-06-25-chart-tool.md  2026-06-25-react-version-mismatch-black-screen.md  2026-06-26-chart-calendar-style.md  2026-06-27-agent-code-separation-cutover.md
docs/: README.md  deployment.md
docs/plans/: 2026-06-15-ai-efficiency-design.md  2026-06-15-training-plans-contract.yaml  2026-06-15-training-plans-design.md  2026-06-15-training-plans-implementation.md  2026-06-16-fitness-mcp-primary-interface-contract.yaml  2026-06-16-fitness-mcp-primary-interface-design.md  2026-06-16-fitness-mcp-primary-interface-implementation-plan.md  2026-06-16-fitness-mcp-server-design.md  2026-06-17-agent-first-architecture-design.md  2026-06-19-brief-fanout-and-cli-ux-design.md  2026-06-22-fitness-qa-clean-output-design.md  2026-06-23-coach-tone-profiles-design.md  2026-06-23-configurable-grading-design.md  2026-06-23-mcp-server-coach-persona-design.md  (+3 more)
ops/: README.md  com.local-fitness.daily.plist  com.local-fitness.daily.plist.template  com.localfitness.brief.plist.template  install-launchd.sh  reset-dev-to-main.sh  uninstall-launchd.sh
scripts/: ab_brief.py  capture_baseline.py  eval_fixtures.py  score_profiles.py  score_prompt.py  shadow_run.py
tests/: conftest.py  test_ab_brief.py  test_auth.py  test_backfill.py  test_baselines.py  test_brief_planner.py  test_briefing.py  test_briefs.py  test_charts.py  test_cli.py  test_coach.py  test_config.py  test_daily.py  test_db.py  test_grounding.py  test_mcp_server.py  test_notes.py  test_plan_tools.py  test_plans.py  test_plans_db.py  test_prompts.py  test_schemas.py  test_score_prompt.py  test_security.py  test_smoke.py  test_status.py  test_tools.py  test_units.py  test_web_api.py  test_web_brief.py  test_web_plan.py
web/: index.html  package.json  pnpm-lock.yaml
web/src/: App.tsx  (+2 more)
(+50 files in other folders)
