[project]
name = "local-fitness"
version = "0.1.0"
description = "Local Garmin-data agent: hands-off ingest + Claude-powered daily briefings"
readme = "README.md"
authors = [
    { name = "Nate Swenson", email = "natejswenson@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.68",
    "click>=8.3.3",
    "fastapi>=0.136.1",
    "fitparse>=1.2.0",
    "garminconnect>=0.3.3",
    "keyring>=25.7.0",
    "python-dotenv>=1.0.1",
    "rich>=15.0.0",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
fitness = "local_fitness.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anthropic>=0.97.0",
    "pytest>=8.0",
    "ruff>=0.6",
]
