[project]
name = "local-fitness"
version = "0.14.0"
description = "Local Garmin-data agent: hands-off ingest + Claude-powered daily briefings"
readme = "README.md"
authors = [
    { name = "Nate Swenson", email = "natejswenson@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.68",
    "click>=8.3.3",
    "fastapi>=0.136.1",
    "fitparse>=1.2.0",
    "garminconnect>=0.3.3",
    "keyring>=25.7.0",
    "python-dotenv>=1.0.1",
    "rich>=15.0.0",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
fitness = "local_fitness.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anthropic>=0.97.0",
    "coverage>=7",
    "pytest>=8.0",
    "pytest-cov>=5",
    "ruff>=0.6",
]

# Treat the agent as code: tests run with a whole-repo coverage gate so the
# deterministic core (db, notes, schemas, prompts, baselines, tool handlers)
# can't silently rot. The gate is a realistic floor, not 100% — the
# network/SDK layers (Garmin ingest, Claude chat/briefing, FastAPI routes)
# aren't exercised here by design. See CHANGELOG 0.1.0.
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=local_fitness --cov=scripts --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["local_fitness", "scripts"]
omit = ["*/__main__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff.lint.per-file-ignores]
# cli.py deliberately calls load_dotenv() before importing submodules that
# read os.environ at import time — the imports can't move above it.
"src/local_fitness/cli.py" = ["E402"]
